--- a/public/index.html
+++ b/public/index.html
@@ -33,12 +33,12 @@
 
           <div class="gallery">
               <div class="gallery-animation">
-                  <div id="giji" class="picture" style="background-image: url(./images/slide2.png);"></div>
-                  <div id="giji" class="picture" style="background-image: url(./images/slide3.png);"></div>
-                  <div id="giji" class="picture" style="background-image: url(./images/slide4.png);"></div>
-                  <div id="giji" class="picture" style="background-image: url(./images/slide1.png);"></div>
-                  <div id="giji" class="picture" style="background-image: url(./images/slide5.png);"></div>
-                  <div id="giji" class="picture" style="background-image: url(./images/slide6.png);"></div>
+                  <div id="giji" class="picture" style="background-image: url(./images/slide2.gif);"></div>
+                  <div id="giji" class="picture" style="background-image: url(./images/slide3.gif);"></div>
+                  <div id="giji" class="picture" style="background-image: url(./images/slide4.gif);"></div>
+                  <div id="giji" class="picture" style="background-image: url(./images/slide1.gif);"></div>
+                  <div id="giji" class="picture" style="background-image: url(./images/slide5.gif);"></div>
+                  <div id="giji" class="picture" style="background-image: url(./images/slide6.gif);"></div>
               </div>
           </div>
     <div id="root"></div>
