--- a/public/index.html
+++ b/public/index.html
@@ -5,10 +5,12 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Embers NFT"
-    />
+    <meta property="og:title" content="Welcome to Cookie and Rock" />
+<meta property="og:site_name" content="Cookie and rock" />
+<meta property="og:description" content="The best place to..." />
+<meta property="og:image" content="/logo192.png" />
+<meta name="theme-color" content="#55bbee" />
+<meta name="twitter:card" content="summary_large_image"
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
