meta tags scori

--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
 <meta property="og:description" content="The best place to..." />
 <meta property="og:image" content="/logo192.png" />
 <meta name="theme-color" content="#55bbee" />
-<meta name="twitter:card" content="summary_large_image"
+<meta name="twitter:card" content="summary_large_image"/>
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
