--- a/public/index.html
+++ b/public/index.html
@@ -1,40 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width,initial-scale=1,shrink-to-fit=no" />
-	<meta name="robots" content="index, follow" />
-	<meta http-equiv="X-UA-Compatible" content="ie=edge">
-	<title>Mushrooms Club NFT</title>
-	<meta property="og:site_name" content="This is an automatic announcement message
-
-	  🚀MINT STARTED" />
-	<meta content="Mushrooms Club NFT" property="og:title">
-
-	  <meta content="7,777 Mushrooms NFT that is set to conquer the Ethereum Blockchain and colonize the metaverse. 🍄
-
-	  🏷️ 𝐒𝐚𝐥𝐞 𝐈𝐧𝐟𝐨
-	  🔹 Mint Price: 0.13 ETH
-	  🔸 Total Supply: 7777
-
-	  𝐓𝐡𝐚𝐧𝐤 𝐲𝐨𝐮 𝐟𝐨𝐫 𝐲𝐨𝐮𝐫 𝐩𝐚𝐭𝐢𝐞𝐧𝐜𝐞 𝐚𝐧𝐝 𝐬𝐮𝐩𝐩𝐨𝐫𝐭!
-
-	  ❤️ Mushrooms Club Team" property="og:description">
-
-
-	<meta property="og:image:width" content="20"><meta property="og:image:height" content="20">
-	<meta name="theme-color" content="#DC143C">
-	<link type="application/json+oembed" href="https://mushroomsclubnft.co/embed/defiland.json">
-	<meta property="og:url" content="https://mushroomsclubnft.co/">
-	<meta property="og:type" content="website">
-	<meta property="og:image" content="https://mushroomsclubnft.co/static/media/previews.jpg">
-	<meta name="twitter:card" content="summary_large_image">
-	<meta property="twitter:domain" content="mushroomsclubnft.co">
-	<meta property="twitter:url" content="https://mushroomsclubnft.co/">
-	<meta name="twitter:title" content="Mushrooms Club">
-	<meta name="twitter:image" content="https://mushroomsclubnft.co/static/media/previews.jpg">
-	<link rel="shortcut icon" href="/favicon.ico" />
-	<link rel="apple-touch-icon" href="/favicon.ico">
+    <meta charset="utf-8" />
+    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="theme-color" content="#000000" />
+    <meta
+      name="description"
+      content="Mushrooms Club NFT"
+    />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <!--
+      manifest.json provides metadata used when your web app is installed on a
+      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
+    -->
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
@@ -44,7 +24,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-
+    <title>Mushrooms Presale MINT LIVE</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
@@ -53,12 +33,12 @@
 
           <div class="gallery">
               <div class="gallery-animation">
-                  <div id="giji" class="picture" style="background-image: url(./images/slide2.gif);"></div>
-                  <div id="giji" class="picture" style="background-image: url(./images/slide3.gif);"></div>
-                  <div id="giji" class="picture" style="background-image: url(./images/slide4.gif);"></div>
-                  <div id="giji" class="picture" style="background-image: url(./images/slide1.gif);"></div>
-                  <div id="giji" class="picture" style="background-image: url(./images/slide5.gif);"></div>
-                  <div id="giji" class="picture" style="background-image: url(./images/slide6.gif);"></div>
+                  <div id="giji" class="picture" style="background-image: url(./images/slide2.png);"></div>
+                  <div id="giji" class="picture" style="background-image: url(./images/slide3.png);"></div>
+                  <div id="giji" class="picture" style="background-image: url(./images/slide4.png);"></div>
+                  <div id="giji" class="picture" style="background-image: url(./images/slide1.png);"></div>
+                  <div id="giji" class="picture" style="background-image: url(./images/slide5.png);"></div>
+                  <div id="giji" class="picture" style="background-image: url(./images/slide6.png);"></div>
               </div>
           </div>
     <div id="root"></div>
