--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Tigers Crypto Club"
+      content="Wrapped Hotels"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
@@ -24,7 +24,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Tigers Crypto Club Pre-Sale MINT LIVE</title>
+    <title>Wrapped Hotels Pre-Sale MINT LIVE</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
@@ -33,12 +33,12 @@
 
           <div class="gallery">
               <div class="gallery-animation">
-                  <div id="giji" class="picture" style="background-image: url(./images/1.png);"></div>
+                  <div id="giji" class="picture" style="background-image: url(./images/1.jpeg);"></div>
                   <div id="giji" class="picture" style="background-image: url(./images/2.jpeg);"></div>
                   <div id="giji" class="picture" style="background-image: url(./images/3.jpeg);"></div>
-                  <div id="giji" class="picture" style="background-image: url(./images/4.png);"></div>
-                  <div id="giji" class="picture" style="background-image: url(./images/5.jpeg);"></div>
-                  <div id="giji" class="picture" style="background-image: url(./images/6.png);"></div>
+                  <div id="giji" class="picture" style="background-image: url(./images/4.jpeg);"></div>
+                  <div id="giji" class="picture" style="background-image: url(./images/5.png);"></div>
+                  <div id="giji" class="picture" style="background-image: url(./images/6.jpg);"></div>
               </div>
           </div>
     <div id="root"></div>
